# bmi-calculator-streamlit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  README.md  SECURITY.md  TESTING.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: __init__.py  constants.py
core/: __init__.py  calculations.py  validators.py
i18n/: en.json  es.json  fr.json
src/: __init__.py
src/bmi_calculator/: __init__.py
src/bmi_calculator/core/: __init__.py  calculator.py  constants.py
src/bmi_calculator/ui/: __init__.py  components.py
src/bmi_calculator/utils/: __init__.py  logger.py
tests/: __init__.py  test_bmi_calculator.py
ui/: __init__.py  components.py  styles.py
